--- a/public/stylesheets/joodoweb.css
+++ b/public/stylesheets/joodoweb.css
@@ -3,11 +3,10 @@ html {
 }
 
 body {
-    background: #99cc99;
+    background: #FFFFFF;
 	font-color: #330000;
+	/* Not getting applied in Safari */
 	font-family: Optima, Segoe, "Segoe UI", Candara, Calibri, Arial, sans-serif;
-    width: 800px;
-	margin: 0 auto 0 auto;
 }
 
 a { color: #663300; }
@@ -17,23 +16,89 @@ a:visited {}
 a:hover { color: #330000; }
 
 div.sidebar {
-	float: left;
-	width: 300px;
+	position: absolute;
+	background-color: #669966;
+	height:100%;
+	width: 270px;
+	margin: 0px;
 }
 
 div.sidebar a.title {
 	color: #330000;
 	text-decoration: none;
-	margin-top: 0px;
 }
 
 div.sidebar a.title h1 {
 	font-size: 5em;
-	margin: 0px auto 30px auto;
+	margin: 10px auto 10px 30px;
 }
 
 div.sidebar ul.navigation {
 	list-style: none;
 	margin: 0px;
 	padding: 0px;
+}
+
+div.sidebar ul.navigation a {
+	text-decoration: none;
+}
+
+div.sidebar ul.navigation a li {
+	background-color: #99cc99;
+	margin: 1px 0px 1px 0px;
+	width: 250px;
+	padding: 10px;
+}
+
+div.sidebar ul.navigation a li span {
+	margin-left: 20px;
+}
+
+div.sidebar span.footer {
+	display: inline-block;
+	margin: 20px auto 20px 30px;
+}
+
+div.sidebar span.footer p {
+	margin: 0px auto 0px auto;
+}
+
+div.drawer {
+	margin: 0px 0px 20px 0px;
+}
+
+div.content {
+	position: relative;
+	left: 270px;
+	width: 600px;
+	padding: 20px;
+}
+
+div.content h1 {
+	font-size: 5em;
+}
+
+div.content h2 {
+	font-size: 3em;
+	margin-top: 30px;
+}
+
+div.content h3 {
+	font-size: 1.8em;
+	margin-top: 25px;
+}
+
+div.content h4 {
+	font-size: 1.3em;
+	margin-top: 20px;
+}
+
+div.content p {
+	margin: 10px 0px 10px 0px;
+}
+
+div.content code {
+	display: block;
+	font-family: Rockwell, "Courier Bold", Courier, Georgia, Times, "Times New Roman", serif;
+	margin-bottom: 20px;
 }
