--- a/public/stylesheets/joodoweb.css
+++ b/public/stylesheets/joodoweb.css
@@ -88,10 +88,10 @@ td.drawer {
 	padding: 0px 20px 0px 20px;
 	border-style:none;
 	line-height:1.5em;
-	height:200%;
 	width:200px;
 	background-image:url('/images/menu_2.png');
 	background-repeat:no-repeat;
+	min-width:200px;
 }
 
 td.drawer a {
